19# Refactor player switch logic by integrating setNextPlayer method for cleaner and modular code